--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
   <body>
     <header>
       <h2>MM</h2>
-      <nav><a>GitHub</a><a>LinkedIn</a></nav>
+      <nav>
+        <a
+          class="darker-text"
+          href="https://github.com/MishMatende"
+          target="_blank"
+          >GitHub</a
+        ><a
+          class="darker-text"
+          href="https://www.linkedin.com/in/mishael-matende-3668b2240/"
+          target="_blank"
+          >LinkedIn</a
+        >
+      </nav>
     </header>
     <main>
       <section>
@@ -55,9 +67,9 @@
           baking.
         </p>
         <div>
-          <a class="outreach darker-text"
+          <a href="mailto:mishaelmatende@gmail.com" class="outreach darker-text"
             ><i class="fa-solid fa-arrow-right"></i>
-            <p>Email Me.</p></a
+            <p>Email Me</p></a
           >
         </div>
       </section>
@@ -66,14 +78,106 @@
         <div class="project-item">
           <div>
             <!-- Add Dynamic Date -->
-            <p class="darker-text">Jan 24, 2024.</p>
+            <p class="darker-text">Nov 21, 2024.</p>
             <p>
-              Scribeness is a free transcription and translation web
+              ScribeNess is a free transcription and translation web
               application.
             </p>
+            <div class="link-container">
+              <a
+                target="_blank"
+                href="https://github.com/MishMatende/scribeness"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+              </a>
+              <a
+                target="_blank"
+                href="https://scribeness.vercel.app/"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
           </div>
           <div>
-            <img src="" alt="scribeness-image" />
+            <img src="public/ScribeNess.png" alt="scribeNess-image" />
+          </div>
+        </div>
+        <div class="project-item">
+          <div>
+            <!-- Add Dynamic Date -->
+            <p class="darker-text">Oct 29, 2024.</p>
+            <p>
+              BolderMotiv is a web application that aims to help individuals
+              work out and aim fo rtheir dream bodies.
+            </p>
+            <div class="link-container">
+              <a
+                target="_blank"
+                href="https://github.com/MishMatende/boldermotiv"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+              </a>
+              <a
+                target="_blank"
+                href="https://boldermotiv.vercel.app/"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
+          </div>
+          <div>
+            <img src="public/BolderMotiv.png" alt="boldermotiv-image" />
+          </div>
+        </div>
+        <div class="project-item">
+          <div>
+            <!-- Add Dynamic Date -->
+            <p class="darker-text">Oct 28, 2024.</p>
+            <p>
+              APOD-React is a project that I developed in order to show my
+              understanding of API intergration and Browser caching.
+            </p>
+            <div class="link-container">
+              <a
+                target="_blank"
+                href="https://github.com/MishMatende/reactapp-nasa"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+                <p class="">GitHub</p>
+              </a>
+              <a
+                target="_blank"
+                href="https://apod-reactapp.vercel.app/"
+                class="link-item"
+              >
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
+          </div>
+          <div>
+            <img src="public/APOD-REACT.png" alt="APOD-REACT-image" />
           </div>
         </div>
       </section>
