styling resume buton

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         > -->
         <a
           href="/resources/Mishael Matende Resume.pdf"
-          class="darker-text"
+          class="darker-text resumeBtn"
           target="_blank"
           >Resume</a
         >
@@ -57,7 +57,7 @@
               <div>
                 <i class="fa-brands fa-instagram"></i>
               </div>
-              <p class="darker-text">_.m.atend.e_</p>
+              <p class="darker-text"><a target="_blank" class="instagram darker-text" href="https://www.instagram.com/_m.atend.e_/">_.m.atend.e_</a></p>
             </div>
             <div>
               <div>
@@ -72,11 +72,17 @@
           things with code. In addition to coding, I love taking walks and
           baking.
         </p>
-        <div>
+        <div class="links">
           <a href="mailto:mishaelmatende@gmail.com" class="outreach darker-text"
             ><i class="fa-solid fa-arrow-right"></i>
             <p>Email Me</p></a
-          >
+          ><a
+          href="/resources/Mishael Matende Resume.pdf"
+          class="darker-text resumeBtn2 outreach"
+          target="_blank"
+          ><i class="fa-solid fa-arrow-right"></i>
+          <p>Resume</p></a
+        >
         </div>
       </section>
       <section class="project-container">
@@ -193,8 +199,9 @@
         <div class="contact-container" id="contact">
           <div class="container">
             <h1 class="darker-text header-text">Send Message <i class="fa-solid fa-paper-plane"></i></h1>
+            <p>Hey there! Send me a message.... tell me what you think about this webiste, or even better, tell me about yourself....I've been told that I am a good listener!!☕☕</p>
 
-            <div class="contact-right">
+            <div class="contact">
               <form name="submit-to-google-sheet">
                 <input
                   class="inputStyle"
