--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <title>Mishael Matende 🔥</title>
   </head>
-  <body>
+  <body id="top-of-page">
     <header>
       <h2>MM</h2>
       <nav>
@@ -233,12 +233,33 @@
         </div>
       </section>
       <footer>
-        <div></div>
+        <div>
+          <p class="project-info">
+        Coded in
+        <a
+          href="https://code.visualstudio.com/"
+          target="_blank"
+          class="anchor-text"
+          >Visual Studio Code</a
+        >
+        by yours truly. <br />Built with HTML and CSS and deployed by
+        <a href="https://www.netlify.com/" target="_blank" class="anchor-text"
+          >Netlify</a
+        >. <br />All text is set to
+        <a href="https://rsms.me/inter/" target="_blank" class="anchor-text"
+          >inter</a
+        >
+        typeface.
+      </p>
+      <a href="#top-of-page" class="scroll-to-top anchor-text">
+        <i class="fa-solid fa-arrow-up"></i>
+      </a>
+        </div>
         <div class="copyright">
           <p>
             Copyright © <span id="copyright-span" class="darker-text"></span>.
           </p>
-          <p>Made by <span class="darker-text">Mishael Matende.</span></p>
+          <p>Made by <span class="anchor-text">Mishael Matende.</span></p>
         </div>
       </footer>
     </main>
